# sudoku-solver

./: output.txt  stack.yaml  sudoku.cabal
puzzles/: sudoku2.txt  sudoku3.txt
src/: Main.hs  Sudoku.hs
src/Sudoku/: Pretty.hs
