name:                sudoku
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/44castle/sudoku#readme
license:             BSD3
license-file:        LICENSE
author:              Castle Kerr
maintainer:          castlekerr@hotmail.com
copyright:           2017 Castle Kerr
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sudoku
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
  other-modules:       Sudoku
                       , Sudoku.Pretty
  build-depends:       base
                       , array
                       , parsec
                       , split
                       , timeit